src/test/ui/associated-type/associated-type-projection-from-multiple-supertraits.stderr
error[E0221]: ambiguous associated type `Color` in bounds of `C`
  --> $DIR/associated-type-projection-from-multiple-supertraits.rs:19:32
   |
LL |     type Color;
   |     ----------- ambiguous `Color` from `Vehicle`
...
LL |     type Color;
   |     ----------- ambiguous `Color` from `Box`
...
LL | fn dent<C:BoxCar>(c: C, color: C::Color) {
   |                                ^^^^^^^^ ambiguous associated type `Color`

error[E0221]: ambiguous associated type `Color` in bounds of `BoxCar`
  --> $DIR/associated-type-projection-from-multiple-supertraits.rs:23:37
   |
LL |     type Color;
   |     ----------- ambiguous `Color` from `Vehicle`
...
LL |     type Color;
   |     ----------- ambiguous `Color` from `Box`
...
LL | fn dent_object<COLOR>(c: dyn BoxCar<Color=COLOR>) {
   |                                     ^^^^^^^^^^^ ambiguous associated type `Color`

error[E0191]: the value of the associated type `Color` (from the trait `Vehicle`) must be specified
  --> $DIR/associated-type-projection-from-multiple-supertraits.rs:23:26
   |
LL |     type Color;
   |     ----------- `Color` defined here
...
LL | fn dent_object<COLOR>(c: dyn BoxCar<Color=COLOR>) {
   |                          ^^^^^^^^^^^^^^^^^^^^^^^ associated type `Color` must be specified

error[E0221]: ambiguous associated type `Color` in bounds of `C`
  --> $DIR/associated-type-projection-from-multiple-supertraits.rs:28:29
   |
LL |     type Color;
   |     ----------- ambiguous `Color` from `Vehicle`
...
LL |     type Color;
   |     ----------- ambiguous `Color` from `Box`
...
LL | fn paint<C:BoxCar>(c: C, d: C::Color) {
   |                             ^^^^^^^^ ambiguous associated type `Color`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0191, E0221.
For more information about an error, try `rustc --explain E0191`.
